--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,8 @@
         "no-use-before-define":"off",
         "react/prop-types": "off",
         "react/jsx-props-no-spreading": "off",
+        "@typescript-eslint/ban-types": "off",
+        "no-unused-expressions":"off",
         "import/extensions": [
             "error",
             "ignorePackages",
